<resources>
    <string name="app_name">mydr.ai</string>
    <string name="no_internet">Please check internet connection</string>
    <string name="no_internetfound">No Internet Connection Found \n Please Check Your Internet Settings </string>
    <string name="login_successfully">Login successfully</string>
    <string name="request_otp">Request OTP</string>


    <string name="enter_mobile_number">Enter Mobile No.</string>
    <string name="login">LOGIN</string>
    <string name="otp_password">OTP/Password</string>
    <string name="use_otp">Use OTP</string>
    <string name="use_password">Use Password</string>
    <string name="Keep_me_signed_in">Keep me signed in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="donot_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="acme_store">Acme Store</string>
    <string name="enter_password">Enter Password</string>

</resources>